# zellij_widgets

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  typos.toml
.github/ISSUE_TEMPLATE/: feature_request.md  issue.md
.github/workflows/: CI.yml
assets/images/: x.md
examples/: README.md
examples/e2e/session_manager/: Cargo.toml
examples/showcase_block/: Cargo.toml  README.md
examples/showcase_block/src/: main.rs
examples/showcase_custom_button/: Cargo.toml  README.md
examples/showcase_custom_button/src/: component.rs  main.rs
examples/showcase_gauge/: Cargo.toml
examples/showcase_gauge/src/: main.rs
examples/showcase_list/: Cargo.toml
examples/showcase_list/src/: main.rs
examples/showcase_popup/: Cargo.toml
examples/showcase_popup/src/: main.rs
examples/showcase_scrollbar/: Cargo.toml
examples/showcase_scrollbar/.cargo/: config.toml
examples/showcase_scrollbar/src/: main.rs
examples/showcase_tabs/: Cargo.toml
examples/showcase_tabs/src/: main.rs
src/: buffer.rs  frame.rs  lib.rs  plugin_pane.rs  prelude.rs  title.rs  widget.rs
src/core/: command.rs  cursor.rs  macros.rs  mod.rs  style.rs
src/core/style/: attributes.rs  content_style.rs  styled_content.rs
src/layout/: gemo.rs  mod.rs
src/style/: ansi.rs  attributes.rs  content_style.rs  mod.rs  modifier.rs  styled.rs  styled_content.rs  stylize.rs  types.rs
src/styles/: mod.rs
src/test/: utils.rs
src/text/: grapheme.rs  line.rs  masked.rs  mod.rs  span.rs
src/uis/: block.rs  erase.rs  gauge.rs  mod.rs  paragraph.rs  reflow.rs  scrollbar.rs  tab.rs
(+25 files in other folders)
