[package]
name = "zellij_widgets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = {version = "2.3" }
parking_lot = "0.12"
unicode-segmentation = "1.10"
unicode-width = "0.1"
cassowary = "0.3"
itertools = "0.12"
paste = "1.0.14"
strum = { version = "0.25", features = ["derive"] }
lru = "0.12.0"
indoc = "2.0.4"



